# Firmum

./: Cargo.toml  GRAMMAR.md  PARSER_NOTES.md  README.md  STATUS.md  firmum.pest  firmum_arXiv_paper.txt
src/: errors.rs  lib.rs  main.rs  parser.rs
src/cert/: mod.rs
src/cli/: mod.rs
src/codegen/: mod.rs
src/fir/: lower.rs  mod.rs
src/smt/: cache.rs  emit.rs  mod.rs  run.rs
src/typeck/: acs.rs  contextual.rs  decidability.rs  mod.rs  temporal.rs
tests/: lower_unit.rs  parse_examples.rs  smt_unit.rs  typeck_unit.rs
